lab1/Test/L1-A-11-0.cmm
struct t727 prsuEXCw7mgTfwvUVn ( struct {
}WWbCYd ) {
  float _Pl2dP , eM8mZMEB , dkBOklql [ 309790252 ] 
    = m ;
  int dY ;
  if ( OtZq2m43 )   return e94r = arS || awTWQI0W 
    && I > Wez + a57bgSpjgg5cDSJZkbxW * [ N == oCbLyrn1KzmBRipnJgC 
    - MoINI3TtuTN_Vn ( xXn2ehG , r1 <= z6IB9oqJ66 + wcOAX8f 
    [ uTV || JKTpF < sldCc8Z53vP [ FUw = LyT0 = ( tQMqNQrlXhTlVTFm 
    >= FkvgXS ) = 1627201289.58093588 ] / 1958828887 . 
    uMc11iSq ] ) ] . cL4a7ctalAT0xEd6tI1 != - ! - m1wvoFFubzktfljTR7 
    / ! e41RO_eULTDj0pN ( ) ;
else {
  }
}
int ND ( ) {
  if eL9CMLdsCFvWS0Rn0 )   while ( aydxjwrWO )   uEHOgok5 
    ;


}
int * ;
int ;
int ;
struct jzctwL3JVMmON {
}qeQBVoR6YAcCukHlY , dif3OsFngryNGX7Q 

;
int ;
int ;
int e5cp9r86RT3g7i ( int OCV7zrqv1ZbZ7pzeyoMd , int 
  A96dMzrTX ) {
}
int Xi6PRvTnxEK ( ) {
}
int ;
int ;
int KNGlWKbpMalW ( ) {
  N ;
  ZWRnWVYsXvJn9PSGcW ;
}
int ;
int m12W0 ( ) {
}
int yXgpF2AtO4skhv_gN ( ) {
  if HdWo9yyc )   Z9YQF0x174IF ;
else   if ( pfi9Iz0rjcuRKf2Q_8jv )   p7VIBlFXqBdCDfvE2 
    ;


  Xx6kx09BS ;
  fc4sfBSSyk ;
}
